Fixed css issue with installer being forced into left-aligned position.

--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -349,7 +349,6 @@ div#content
 div#content > table
 {
     width: 100%;
-    margin: 0 0 0 15px;
 }
 /* put a bit of left margin in when the left column menu is hidden */
 div#content .noLeftColumn
